# xfce4-i3-window-title-plugin

./: .gitignore  AUTHORS  Makefile.am  README  README.md  TODO  configure.ac.in
plugin/: Makefile.am  i3-window-title.desktop.in  i3wm-window-title.c  i3wm-window-title.h
po/: POTFILES.in
